--- a/TaxiForSure/taxiforsure/SelectCity.xaml
+++ b/TaxiForSure/taxiforsure/SelectCity.xaml
@@ -29,7 +29,7 @@
 
         <!--ContentPanel - place additional content here-->
         <Grid x:Name="ContentPanel" Grid.Row="0"  Grid.RowSpan="2" Margin="12,0,12,0">
-            <ListBox Name="CityListBox" VerticalAlignment="Center" FontSize="{StaticResource PhoneFontSizeLarge}" Foreground="Black" SelectionChanged="CityListBox_OnSelectionChanged" BorderBrush="Black" BorderThickness="1" Height="292" Margin="0,189,0,257">
+            <ListBox Name="CityListBox" VerticalAlignment="Center" FontSize="{StaticResource PhoneFontSizeLarge}" Foreground="Black" SelectionChanged="CityListBox_OnSelectionChanged" ItemsSource="PopulateCityTable" BorderBrush="Black" BorderThickness="0" Margin="0,60,0,40">
                 <ListBoxItem HorizontalAlignment="Center" Margin="0,20,0,0" Content="Bangalore"/>
                 <ListBoxItem HorizontalAlignment="Center" Margin="0,20,0,0" Content="Chennai"/>
                 <ListBoxItem HorizontalAlignment="Center" Margin="0,20,0,0" Content="Delhi"/>
